Change the list type

--- a/index.html
+++ b/index.html
@@ -9,33 +9,34 @@
 <body>
 
   <h1>Dinosaurs</h1>
-  <div class="icons">
-<ul>
-  <li>
-    <i class="icon i-24">
-      <img src="images/ankylosaurus.svg" alt="">
-    </i>
-    <span class="icon-label">Ankylosaurus</span>
-</li>
-<li>
-    <i class="icon i-24">
-      <img src="images/hadrosaur.svg" alt="">
-    </i>
-    <span class="icon-label">Hadrosaur</span>
-</li>
-<li>
-    <i class="icon i-24">
-      <img src="images/stegosaurus.svg" alt="">
-    </i>
-    <span class="icon-label">Stegosaurus</span>
-</li>
-<li>
-    <i class="icon i-24">
-      <img src="images/triceratops.svg" alt="">
-    </i>
-    <span class="icon-label">Triceratops</span>
-</li>
-</div>
+  <div class="list-group">
+    <ol>
+      <li>
+        <i class="icon i-24">
+          <img src="images/ankylosaurus.svg" alt="">
+        </i>
+        <span class="icon-label">Ankylosaurus</span>
+      </li>
+      <li>
+        <i class="icon i-24">
+          <img src="images/hadrosaur.svg" alt="">
+        </i>
+        <span class="icon-label">Hadrosaur</span>
+      </li>
+      <li>
+        <i class="icon i-24">
+          <img src="images/stegosaurus.svg" alt="">
+        </i>
+        <span class="icon-label">Stegosaurus</span>
+      </li>
+      <li>
+        <i class="icon i-24">
+          <img src="images/triceratops.svg" alt="">
+        </i>
+        <span class="icon-label">Triceratops</span>
+      </li>
+    </ol>
+  </div>
 
 </body>
 </html>
