Remove bullets from the list

--- a/index.html
+++ b/index.html
@@ -9,28 +9,28 @@
 <body>
 
   <h1>Dinosaurs</h1>
-  <div class="list-group">
-    <ol>
+  <div>
+    <ol class="list-group">
       <li>
-        <i class="icon i-24">
+        <i class="icon i-64">
           <img src="images/ankylosaurus.svg" alt="">
         </i>
         <span class="icon-label">Ankylosaurus</span>
       </li>
       <li>
-        <i class="icon i-24">
+        <i class="icon i-64">
           <img src="images/hadrosaur.svg" alt="">
         </i>
         <span class="icon-label">Hadrosaur</span>
       </li>
       <li>
-        <i class="icon i-24">
+        <i class="icon i-64">
           <img src="images/stegosaurus.svg" alt="">
         </i>
         <span class="icon-label">Stegosaurus</span>
       </li>
       <li>
-        <i class="icon i-24">
+        <i class="icon i-64">
           <img src="images/triceratops.svg" alt="">
         </i>
         <span class="icon-label">Triceratops</span>
